--- a/WinTests/WinTests/Views/MainWindow.xaml
+++ b/WinTests/WinTests/Views/MainWindow.xaml
@@ -1,12 +1,15 @@
-﻿<Window x:Class="WinTests.MainWindow"
+﻿<Window x:Class="WinTests.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WinTests"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" 
+        Height="450" 
+        Width="800">
+    
     <Grid>
 
     </Grid>
+    
 </Window>
