--- a/WinTests/WinTests/MainWindow.xaml
+++ b/WinTests/WinTests/MainWindow.xaml
@@ -2,167 +2,18 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-        xmlns:converters="clr-namespace:WinTests.Converters"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
         ResizeMode="NoResize"
         Height="450" 
         Width="800">
 
-    <Window.Resources>
-
-        <converters:BoolToVisibilityConverter x:Key="boolToVisibilityConverter" />
-        
-        <Style TargetType="Button" 
-               x:Key="RoundedButton">
-            
-            <Setter Property="Template">
-                
-                <Setter.Value>
-                    
-                    <ControlTemplate TargetType="Button">
-                        
-                        <Border CornerRadius="5" 
-                                Background="{TemplateBinding Background}" 
-                                BorderThickness="0">
-                            
-                            <ContentPresenter HorizontalAlignment="Center" 
-                                              VerticalAlignment="Center"/>
-
-                        </Border>
-                        
-                    </ControlTemplate>
-                    
-                </Setter.Value>
-                
-            </Setter>
-            
-        </Style>
-
-        <Style x:Key="myLBStyle" 
-               TargetType="{x:Type ListBoxItem}">
-
-            <Setter Property="IsSelected" 
-                    Value="{Binding Content.IsSelected, Mode=TwoWay, RelativeSource={RelativeSource Self}}"/>
-            
-            <Setter Property="Template">
-                
-                <Setter.Value>
-                    
-                    <ControlTemplate TargetType="ListBoxItem">
-                        
-                        <ContentPresenter/>
-                        
-                    </ControlTemplate>
-                    
-                </Setter.Value>
-                
-            </Setter>
-
-            <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
-
-        </Style>
-
-    </Window.Resources>
-    
     <Grid>
-        
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="0.25*"/>
-            <ColumnDefinition Width="1"/>
-            <ColumnDefinition Width="0.75*"/>
-        </Grid.ColumnDefinitions>
-
-        <Grid Grid.Column="0"
-              VerticalAlignment="Stretch">
-            
-            <Grid.RowDefinitions>
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="50"/>
-            </Grid.RowDefinitions>
-
-            <Label Grid.Row="0"
-                   Content="FUNCTIONAL PROGRAMMING"
-                   FontWeight="Bold"
-                   FontSize="12"
-                   HorizontalAlignment="Center"
-                   Margin="0, 15, 0, 0"/>
-
-            <ListBox Grid.Row="1"
-                     Margin="10, 0, 10, 10"
-                     BorderThickness="0"
-                     ItemsSource="{Binding Path=ThemesCollection}"
-                     SelectedItem="{Binding Path=SelectedItem}"
-                     SelectionMode="Single"
-                     ItemContainerStyle="{StaticResource myLBStyle}"
-                     VerticalAlignment="Stretch">
-
-                <ListBox.ItemTemplate>
-
-                    <DataTemplate>
-                        
-                        <Grid HorizontalAlignment="Stretch"
-                              Margin="0, 25, 0, 0">
-
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="25"/>
-                            </Grid.ColumnDefinitions>
-
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="1"/>
-                            </Grid.RowDefinitions>
-
-                            <Label Grid.Row="0"
-                                   Grid.Column="0"
-                                   Padding="0"
-                                   FontWeight="Bold"
-                                   FontSize="13"
-                                   Content="{Binding Path=Title}"/>
-
-                            <Image Grid.Row="0"
-                                   Grid.Column="1"
-                                   VerticalAlignment="Center"
-                                   HorizontalAlignment="Right"
-                                   Visibility="{Binding IsSelected, Converter={StaticResource boolToVisibilityConverter}}"
-                                   Source="../Resources/Images/selected_arrow_right.png"/>
-                            
-                            <Rectangle Grid.Row="1"
-                                       Grid.Column="0"
-                                       Grid.ColumnSpan="2"
-                                       HorizontalAlignment="Stretch"
-                                       Fill="#68000000"/>
-                            
-                        </Grid>
-                        
-                    </DataTemplate>
-                    
-                </ListBox.ItemTemplate>
-
-            </ListBox>
-
-            <Button Grid.Row="2"
-                    Foreground="White"
-                    Background="#6C757D"
-                    Content="All results"
-                    VerticalAlignment="Stretch"
-                    Command="{Binding Path=AllResultsCommand}"
-                    Style="{StaticResource RoundedButton}"
-                    Margin="10, 10"/>
-
-        </Grid>
-
-        <Rectangle Grid.Column="1" 
-                   Fill="#68000000"/>
-
-        <Frame Grid.Column="2"
-               NavigationUIVisibility="Hidden"
-               x:Name="frameContainer"
+ 
+        <Frame NavigationUIVisibility="Hidden"
+               x:Name="mainFrameContainer"
                VerticalAlignment="Stretch"
-               HorizontalAlignment="Stretch"
-               Source="{Binding Path=CurrentPage}"/>
+               HorizontalAlignment="Stretch"/>
 
     </Grid>
 
