--- a/WinTests/WinTests/Views/AllResultsPageView.xaml
+++ b/WinTests/WinTests/Views/AllResultsPageView.xaml
@@ -91,7 +91,7 @@
                                                                FontWeight="Bold"
                                                                FontSize="13"
                                                                Margin="10, 0, 0, 0"
-                                                               Content="{Binding TestTitle}"/>
+                                                               Content="{Binding Title}"/>
 
 
                                                         <StackPanel Grid.Row="1"
